<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="admob_ad_unit_id">a14ef4f9ea0b7ca</string>
    <string name="app_name">Beer Cellar</string>
    <string name="title_beer_list">Beer Cellar: Beer List</string>
    <string name="title_beer_label">Beer Cellar: Beer Label</string>
    <string name="title_share_on_facebook">Beer Cellar: Share on Facebook</string>
    <string name="title_new_beer">Beer Cellar: New Beer</string>
    <string name="title_backup_beer_list">Beer Cellar: Backup Beer List</string>
    <string name="title_search_beer_list">Beer Cellar: Search Beer List</string>
    <string name="title_send_error_report">Beer Cellar: Send Error Report</string>
    <string name="title_more_about_this_beer">Beer Cellar: More About This Beer</string>
    <string name="title_around_me">Beer Cellar: Around Me</string>
    <string name="title_share_with_community">Beer Cellar: Share with Community</string>
    <string name="title_community">Beer Cellar: Community</string>
    <string name="title_view_map">Beer Cellar: View Map</string>
    <string name="title_view_beer">Beer Cellar: View Beer</string>
    <string name="title_search_results">Beer Cellar: Search Results</string>
    <string name="title_beer_of_the_day">Beer Cellar: Beer Of The Day</string>
    <string name="title_login">Log In to Beer Cellar</string>
    <string name="title_signup">Sign Up for Beer Cellar</string>
    <string name="title_comparable_beer_reviews">Beer Cellar: You might also like</string>
    <string name="title_recommended_beer_reviews">Beer Cellar: Recommendations for you</string>
    <string name="my_beers">My Beers</string>
    <string name="send_test_daily_campaign">Send Test Daily Campaign</string>
    <string name="send_daily_campaign">Send Daily Campaign</string>
    <string name="internal_storage_label">Internal Storage</string>
    <string name="external_storage_label">SD Card</string>
    <string name="external_storage_no_images">There are no images on the SD Card</string>
    <string name="user_name">User Name:</string>
    <string name="user_id">Email:</string>
    <string name="password">Password:</string>
    <string name="about_yourself">About Yourself:</string>
    <string name="country">Country:</string>
    <string name="zipcode">Zip or Postal Code:</string>
    <string name="login_user_id_hint"></string>
    <string name="login">Log In</string>
    <string name="recover_password">Forgot Password</string>
    <string name="signup">Sign Up</string>
    <string name="login_successful">Logged In</string>
    <string name="login_failed">Either your username or your password were
		incorrect</string>
    <string name="login_failed_user_does_not_exist">You dont have an account with us yet. Click on Sign
		Up to create one.</string>
    <string name="recover_password_successful">Your password has been emailed to you.</string>
    <string name="recover_password_failed">Unable to recover your password. Please try
		again...</string>
    <string name="recover_password_failed_user_does_not_exist">You dont have an account with us yet. Click on Sign
		Up to create one.</string>
    <string name="userid_missing">Please enter your email.</string>
    <string name="password_missing">Please enter your password.</string>
    <string name="username_missing">Please enter your user name.</string>
    <string name="invalid_email_address">Please enter a valid email address.</string>
    <string name="signup_successful">Your account was created successfully</string>
    <string name="signup_failed">Unable to create your account. Please try again...</string>
    <string name="signup_failed_existing_user">You already have an account with us. Please
		login...</string>
    <string name="upload_label">Upload</string>
    <string name="current_password">Current Password:</string>
    <string name="new_password">New Password:</string>
    <string name="change_password">Change Password</string>
    <string name="password_change_successful">Your password was changed successfully</string>
    <string name="password_change_failed">Unable to change your password. Please try again...</string>
    <string name="view_user_reviews_label">View All Beer Reviews</string>
    <string name="view_user_favorites_label">View Favorite Beer Reviews</string>
    <string name="view_user_following_label">View Following</string>
    <string name="update_photo_label">Update Photo</string>
    <string name="update_photo_unsuccessful">Unable to upload your photo</string>
    <string name="try_again">Try Again</string>
    <string name="select_another_photo">Select Another Photo</string>
    <string name="downloading_user_photo_message">Downloading user photo...</string>
    <string name="follow_label">Follow</string>
    <string name="update_photo_prompt">Do you really look like this?</string>
    <string name="unable_to_download_user_profile_message">Unable to connect to the server. Please try again
		later...</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_update_successful">Your profile was updated successfully</string>
    <string name="profile_update_failed">Unable to update your profile. Please try again...</string>
    <string name="rate_and_review_reminder_title"></string>
    <string name="rate_and_review_reminder_message">We hope you like using Beer Cellar. Please take a
		moment to rate Beer Cellar on the market, or even write a review.</string>
    <string name="rate_and_review_reminder_rate_label">Rate Beer Cellar</string>
    <string name="rate_and_review_reminder_remind_me_later_label">Remind me later</string>
    <string name="rate_and_review_reminder_no_label">No, Thanks</string>
    <string name="please_try_again_later_message">Please try again later...</string>
    <string name="notification_new_beer_reviews">new beer reviews</string>
    <string name="notification_new_beer_reviews_from_following">new beer reviews from people you are following</string>
    <string name="new_version_available_title">New Version Available</string>
    <string name="new_version_available_message">Please click on Yes to upgrade to the new version.</string>
    <string name="notification_beer_of_the_day">Beer Of The Day</string>
    <string name="notification_comparable_beer_reviews">You might also like these reviews</string>
    <string name="notification_recommended_beer_reviews">Recommendations for you</string>
    <string name="preferences">Preferences</string>
    <string name="receive_new_beer_reviews_notification_from_following_label">Receive new beer review notifications from people
		that you are following</string>
    <string name="receive_new_beer_reviews_notification_label">Receive new beer review notifications</string>
    <string name="receive_beer_of_the_day_notification_label">Receive beer of the day notification</string>
    <string name="email_subscription_label">Receive emails from Beer Cellar Community</string>
    <string name="comment_posted_email_subscription_label">Receive emails when someone posts a comment on your beer review</string>
    <string name="beer_list_rows_per_page_label">Number of Beer Reviews to display</string>
    <string-array name="beer_list_rows_per_page_options">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
    </string-array>
    <string name="maps_api_key">ABQIAAAA-cDJ8Vf2F2lmQaIUdwOZ2hS2126eF5bBFs-C0RHAmRyBkktpqxRO7UXoEdTnKHVzrZSe63QPJkbAQQ</string>
    <string name="did_you_know_title">Did You Know?</string>
    <string name="do_not_show_did_you_know">Do not show again</string>
    <string name="progress_uploading_message">Uploading. Please wait...</string>
    <string name="progress_signup_message">Creating account. Please wait...</string>
    <string name="progress_login_message">Log In in progress. Please wait...</string>
    <string name="progress_recover_password_message">Recovering your password. Please wait...</string>
    <string name="progress_searching_message">Searching. Please wait...</string>
    <string name="progress_loading_message">Loading. Please wait...</string>
    <string name="progress_saving_message">Saving. Please wait...</string>
    <string name="progress_deleting_message">Deleting. Please wait...</string>
    <string name="external_storage_not_available_message">Please insert an SD card!</string>
    <string name="external_storage_not_writable_message">The SD card is not writable!</string>
    <string name="posting_dialog_message">Posting. Please wait...</string>
    <string name="facebook_wall_post_unsuccessful_message">Unable to Post message to your wall!</string>
    <string name="picture_taken_message">Picture taken</string>
    <string name="picture_not_taken_message">Picture was not taken!</string>
    <string name="backing_up_database_message">Backing up your Beer List database...</string>
    <string name="database_backedup_successfully_message">Your Beer List database was backed up successfully</string>
    <string name="database_backup_failed_message">Unable to back up your Beer List database!</string>
    <string name="restoring_database_message">Restoring your Beer List database...</string>
    <string name="database_restored_successfully_message">Your Beer List database was restored successfully</string>
    <string name="database_restore_failed_message">Unable to restore your Beer List database!</string>
    <string name="instructions">Help</string>
    <string name="sort_by_beer">Beer</string>
    <string name="sort_by_style">Style</string>
    <string name="sort_by_country">Country</string>
    <string name="sort">Sort</string>
    <string name="search_label">Search</string>
    <string name="cancel_label">Cancel</string>
    <string name="beer_edit_beer_hint">Golden Monkey</string>
    <string name="beer_edit_alcohol_hint">9.5</string>
    <string name="beer_edit_price_hint">12.95</string>
    <string name="beer_edit_style_hint">Belgian-style Ale</string>
    <string name="beer_edit_brewery_hint">Victory Brewing Company</string>
    <string name="beer_edit_state_hint">Pennsylvania</string>
    <string name="beer_edit_country_hint">United States</string>
    <string name="beer_edit_share_label">Share with Community:</string>
    <string name="around_me">Around Me</string>
    <string name="community_description">Beer Cellar Community is a growing community of
		beer
		enthusiasts that want to share their beer drinking experiences
		with
		others</string>
    <string name="community_login">Beer Cellar</string>
    <string name="community_post_anonymously">Share Anonymously</string>
    <string name="community_do_not_share">Do Not Share</string>
    <string name="share_with_community_message_header">Share
		your Beer Review with the Beer Cellar
		Community</string>
    <string name="share_with_community_message_1">Use your Facebook Account</string>
    <string name="share_with_community_message_2">Use your Beer Cellar Account or Create one</string>
    <string name="share_with_community_message_3">Share Anonymously</string>
    <string name="share_with_community_message_4">Choose Not to Share</string>
    <string name="community_beer_beer_label">Beer:</string>
    <string name="community_beer_alcohol_label">Alcohol %:</string>
    <string name="community_beer_price_label">Price:</string>
    <string name="community_beer_style_label">Style:</string>
    <string name="community_beer_brewery_label">brewery:</string>
    <string name="community_beer_state_label">State/Province/Region:</string>
    <string name="community_beer_country_label">Country:</string>
    <string name="community_landing_page_message">http://beercellarcommunity.appspot.com</string>
</resources>