<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<RadioGroup android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:id="@+id/sort_by">
		<RadioButton android:checked="false" android:id="@+id/sort_by_beer"
			android:text="@string/sort_by_beer" />
		<RadioButton android:checked="false" android:id="@+id/sort_by_style"
			android:text="@string/sort_by_style" />
		<RadioButton android:checked="false" android:id="@+id/sort_by_country"
			android:text="@string/sort_by_country" />
	</RadioGroup>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">
		<Button android:layout_width="100px" android:layout_height="wrap_content"
			android:text="@string/sort" android:id="@+id/sort_button" />
	</LinearLayout>
</LinearLayout>
