<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<TableLayout android:id="@+id/headerTable"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:shrinkColumns="0" android:layout_marginTop="10dp">
		<TableRow>
			<TextView android:id="@+id/shareWithCommunityMessageHeader"
				android:text="@string/share_with_community_message_header"
				android:gravity="center" android:textStyle="bold" android:textSize="18sp"
				android:layout_marginLeft="5dp" android:layout_marginRight="5dp" />
		</TableRow>
		<TableRow>
			<TextView android:id="@+id/communityDescription"
				android:text="@string/community_description" android:gravity="center"
				android:layout_marginLeft="5dp" android:layout_marginRight="5dp" />
		</TableRow>
		<TableRow>
			<TextView android:id="@+id/communityLandingPageMessage"
				android:text="@string/community_landing_page_message"
				android:gravity="center" android:autoLink="all"
				android:layout_marginLeft="5dp" android:layout_marginRight="5dp" />
		</TableRow>
		<TableRow>
			<TextView android:id="@+id/txt" android:layout_marginTop="5dp"
				android:gravity="center" />
		</TableRow>
	</TableLayout>
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" 	android:layout_height="wrap_content" android:layout_below="@+id/headerTable">
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:shrinkColumns="0" android:stretchColumns="1">
				<TableRow android:layout_height="wrap_content">
					<TextView android:id="@+id/shareWithCommunityMessage1"
						android:text="@string/share_with_community_message_1"
						android:layout_marginTop="15dp" android:layout_height="wrap_content"
						android:layout_marginLeft="5dp" android:layout_marginRight="5dp" />
					<com.cm.beer.facebook.LoginButton
						android:id="@+id/login" android:src="@drawable/login_button"
						android:gravity="center" android:layout_marginTop="15dp"
						android:layout_height="wrap_content" android:layout_marginLeft="5dp"
						android:layout_marginRight="5dp" />
				</TableRow>
				<TableRow android:layout_height="wrap_content">
					<TextView android:id="@+id/shareWithCommunityMessage2"
						android:text="@string/share_with_community_message_2"
						android:gravity="left" android:layout_marginTop="15dp"
						android:layout_height="wrap_content" android:layout_marginLeft="5dp"
						android:layout_marginRight="5dp" />
					<Button android:id="@+id/communityLoginButton"
						android:text="@string/community_login" android:gravity="center"
						android:layout_marginTop="15dp" android:layout_height="wrap_content"
						android:layout_marginLeft="5dp" android:layout_marginRight="5dp" />
				</TableRow>
				<TableRow android:layout_height="wrap_content">
					<TextView android:id="@+id/shareWithCommunityMessage3"
						android:text="@string/share_with_community_message_3"
						android:gravity="left" android:layout_marginTop="15dp"
						android:layout_height="wrap_content" android:layout_marginLeft="5dp"
						android:layout_marginRight="5dp" />
					<Button android:id="@+id/postAnonymouslyButton"
						android:text="@string/community_post_anonymously" android:gravity="center"
						android:layout_marginTop="15dp" android:layout_height="wrap_content"
						android:layout_marginLeft="5dp" android:layout_marginRight="5dp" />
				</TableRow>
				<TableRow android:layout_height="wrap_content">
					<TextView android:id="@+id/shareWithCommunityMessage4"
						android:text="@string/share_with_community_message_4"
						android:gravity="left" android:layout_marginTop="15dp"
						android:layout_height="wrap_content" android:layout_marginLeft="5dp"
						android:layout_marginRight="5dp" />
					<Button android:id="@+id/skipSharingButton" android:text="@string/community_do_not_share"
						android:gravity="center" android:layout_marginTop="15dp"
						android:layout_height="wrap_content" android:layout_marginLeft="5dp"
						android:layout_marginRight="5dp" />
				</TableRow>
			</TableLayout>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>
