<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<Button android:id="@+id/search" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_below="@+id/country_label"
		android:layout_marginLeft="5dp" android:layout_marginTop="20dp"
		android:text="@string/search_label" android:padding="10dp"
		android:gravity="center_vertical" android:focusableInTouchMode="true" />
	<Button android:id="@+id/cancel" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_below="@+id/country_label"
		android:layout_toRightOf="@+id/search" android:layout_marginLeft="5dp"
		android:layout_marginTop="20dp" android:text="@string/cancel_label"
		android:padding="10dp" android:gravity="center_vertical" />
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_below="@id/search"
		android:layout_marginTop="20dp" android:layout_height="fill_parent">
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<RatingBar android:id="@+id/rating" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginLeft="5dp"
				android:layout_marginTop="10dp" android:numStars="5" android:rating="0"
				android:stepSize="1.0" android:gravity="center_vertical"
				android:focusableInTouchMode="true" />

			<TextView android:id="@+id/date_created_label"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_below="@+id/rating" android:layout_marginLeft="5dp"
				android:layout_marginTop="10dp" android:gravity="center_vertical" />
			<TextView android:id="@+id/date_updated_label"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_below="@+id/date_created_label"
				android:layout_marginLeft="5dp" android:layout_marginTop="2dp"
				android:gravity="center_vertical" />
			<View android:id="@+id/divider1" android:background="@drawable/divider"
				android:layout_width="fill_parent" android:layout_height="1dp"
				android:layout_below="@+id/date_updated_label" />

			<TextView android:id="@+id/beer_label" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_below="@+id/divider1"
				android:layout_marginLeft="5dp" android:layout_marginTop="30dp"
				android:gravity="left" android:text="@string/community_beer_beer_label"
				android:textStyle="bold" />
			<View android:id="@+id/divider2" android:background="@drawable/divider"
				android:layout_width="fill_parent" android:layout_height="1dp"
				android:layout_below="@+id/beer_label" />
			<AutoCompleteTextView android:id="@+id/beer"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_below="@+id/divider2" android:layout_marginRight="5dp"
				android:layout_marginLeft="5dp" android:text="" android:lines="1"
				android:hint="@string/beer_edit_beer_hint" android:gravity="left"
				android:focusableInTouchMode="true" android:singleLine="true"
				android:nextFocusDown="@+id/alcohol" android:textColor="@drawable/black"/>

			<TextView android:id="@+id/share_label"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_below="@+id/beer" android:layout_marginLeft="5dp"
				android:layout_marginTop="30dp" android:gravity="left"
				android:text="@string/beer_edit_share_label" android:textStyle="bold" />
			<View android:id="@+id/dividerShare" android:background="@drawable/divider"
				android:layout_width="fill_parent" android:layout_height="1dp"
				android:layout_below="@+id/share_label" />
			<CheckBox android:id="@+id/share" android:layout_below="@+id/dividerShare"
				android:layout_marginLeft="5dp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:checked="false"
				android:nextFocusDown="@+id/alcohol" />

			<TextView android:id="@+id/alcohol_label" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_below="@+id/share"
				android:layout_marginLeft="5dp" android:layout_marginTop="30dp"
				android:gravity="left" android:text="@string/community_beer_alcohol_label"
				android:textStyle="bold" />
			<View android:id="@+id/divider3" android:background="@drawable/divider"
				android:layout_width="fill_parent" android:layout_height="1dp"
				android:layout_below="@+id/alcohol_label" />
			<EditText android:id="@+id/alcohol" android:layout_below="@+id/divider3"
				android:layout_width="80dp" android:layout_height="wrap_content"
				android:layout_marginRight="5dp" android:layout_marginLeft="5dp"
				android:text="" android:hint="@string/beer_edit_alcohol_hint"
				android:gravity="left" android:focusableInTouchMode="true"
				android:singleLine="true" android:inputType="numberDecimal"
				android:nextFocusDown="@+id/price" android:textColor="@drawable/black"/>

			<TextView android:id="@+id/price_label"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_below="@+id/alcohol" android:layout_marginTop="30dp"
				android:layout_marginLeft="5dp" android:gravity="left"
				android:text="@string/community_beer_price_label" android:textStyle="bold" />
			<View android:id="@+id/divider4" android:background="@drawable/divider"
				android:layout_width="fill_parent" android:layout_height="1dp"
				android:layout_below="@+id/price_label" />
			<EditText android:id="@+id/price" android:layout_width="80dp"
				android:layout_height="wrap_content" android:layout_marginRight="5dp"
				android:layout_marginLeft="5dp" android:layout_below="@+id/divider4"
				android:hint="@string/beer_edit_price_hint" android:gravity="left"
				android:focusableInTouchMode="true" android:singleLine="true"
				android:inputType="numberDecimal" android:nextFocusDown="@+id/style" android:textColor="@drawable/black"/>

			<TextView android:id="@+id/style_label" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_below="@+id/price"
				android:layout_marginLeft="5dp" android:layout_marginTop="30dp"
				android:gravity="left" android:text="@string/community_beer_style_label"
				android:textStyle="bold" />
			<View android:id="@+id/divider5" android:background="@drawable/divider"
				android:layout_width="fill_parent" android:layout_height="1dp"
				android:layout_below="@+id/style_label" />
			<AutoCompleteTextView android:id="@+id/style"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginRight="5dp" android:layout_marginLeft="5dp"
				android:layout_below="@+id/divider5" android:text=""
				android:hint="@string/beer_edit_style_hint" android:gravity="left"
				android:focusableInTouchMode="true" android:singleLine="true"
				android:nextFocusDown="@+id/brewery" android:textColor="@drawable/black"/>

			<TextView android:id="@+id/brewery_label"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_below="@+id/style" android:layout_marginLeft="5dp"
				android:layout_marginTop="30dp" android:gravity="left"
				android:text="@string/community_beer_brewery_label"
				android:textStyle="bold" />
			<View android:id="@+id/divider6" android:background="@drawable/divider"
				android:layout_width="fill_parent" android:layout_height="1dp"
				android:layout_below="@+id/brewery_label" />
			<EditText android:id="@+id/brewery" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginRight="5dp"
				android:layout_marginLeft="5dp" android:layout_below="@+id/divider6"
				android:hint="@string/beer_edit_brewery_hint" android:gravity="left"
				android:focusableInTouchMode="true" android:singleLine="true"
				android:nextFocusDown="@+id/state" android:textColor="@drawable/black"/>

			<TextView android:id="@+id/state_label"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_below="@+id/brewery" android:layout_marginLeft="5dp"
				android:layout_marginTop="30dp" android:gravity="left"
				android:text="@string/community_beer_state_label"
				android:textStyle="bold" />
			<View android:id="@+id/divider7" android:background="@drawable/divider"
				android:layout_width="fill_parent" android:layout_height="1dp"
				android:layout_below="@+id/state_label" />
			<AutoCompleteTextView android:id="@+id/state"
				android:layout_below="@+id/divider7" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginRight="5dp"
				android:layout_marginLeft="5dp" android:hint="@string/beer_edit_state_hint"
				android:gravity="left" android:focusableInTouchMode="true"
				android:singleLine="true" android:nextFocusDown="@+id/country" android:textColor="@drawable/black"/>

			<TextView android:id="@+id/country_label"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_below="@+id/state" android:layout_marginLeft="5dp"
				android:layout_marginTop="30dp" android:gravity="left"
				android:text="@string/community_beer_country_label"
				android:textStyle="bold" />
			<View android:id="@+id/divider8" android:background="@drawable/divider"
				android:layout_width="fill_parent" android:layout_height="1dp"
				android:layout_below="@+id/country_label" />
			<AutoCompleteTextView android:id="@+id/country"
				android:layout_below="@+id/divider8" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginRight="5dp"
				android:layout_marginLeft="5dp" android:hint="@string/beer_edit_country_hint"
				android:gravity="left" android:focusableInTouchMode="true"
				android:singleLine="true" android:textColor="@drawable/black"/>

		</RelativeLayout>
	</ScrollView>
</RelativeLayout>