<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<RelativeLayout android:id="@+id/header"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_alignParentTop="true" android:gravity="right">
		<Button android:id="@+id/signup" android:layout_width="100dp"
			android:layout_height="wrap_content" android:layout_marginLeft="5dp"
			android:layout_marginTop="20dp" android:text="@string/signup"
			android:padding="10dp" android:gravity="center" />
	</RelativeLayout>
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_below="@+id/header">
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="wrap_content" android:layout_height="wrap_content">

			<TextView android:id="@+id/message" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginLeft="5dp"
				android:layout_marginTop="30dp" android:gravity="left"
				android:textStyle="bold" />
			<TextView android:id="@+id/user_id_label"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginLeft="5dp" android:layout_marginTop="30dp"
				android:gravity="left" android:text="@string/user_id"
				android:textStyle="bold" android:layout_below="@+id/message" />
			<View android:id="@+id/divider1" android:background="@drawable/divider"
				android:layout_width="fill_parent" android:layout_height="1dp"
				android:layout_below="@+id/user_id_label" />
			<EditText android:id="@+id/user_id" android:layout_below="@+id/divider1"
				android:layout_width="200dp" android:layout_height="wrap_content"
				android:layout_marginRight="5dp" android:layout_marginLeft="5dp"
				android:gravity="left" android:focusableInTouchMode="true"
				android:singleLine="true" android:nextFocusDown="@+id/password"
				android:textColor="@drawable/black" android:hint="@string/login_user_id_hint"
				android:inputType="textEmailAddress" />
			<TextView android:id="@+id/password_label"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginLeft="5dp" android:layout_marginTop="30dp"
				android:gravity="left" android:text="@string/password"
				android:textStyle="bold" android:layout_below="@+id/user_id" />
			<View android:id="@+id/divider2" android:background="@drawable/divider"
				android:layout_width="fill_parent" android:layout_height="1dp"
				android:layout_below="@+id/password_label" />
			<EditText android:id="@+id/password" android:layout_below="@+id/divider2"
				android:layout_width="200dp" android:layout_height="wrap_content"
				android:layout_marginRight="5dp" android:layout_marginLeft="5dp"
				android:gravity="left" android:focusableInTouchMode="true"
				android:singleLine="true" android:nextFocusDown="@+id/login"
				android:textColor="@drawable/black" android:inputType="textPassword" />

			<Button android:id="@+id/login" android:layout_width="100dp"
				android:layout_height="wrap_content" android:layout_marginLeft="5dp"
				android:layout_marginTop="20dp" android:text="@string/login"
				android:padding="10dp" android:gravity="center"
				android:layout_below="@+id/password" />
			<Button android:id="@+id/recover_password"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginLeft="40dp" android:layout_marginTop="20dp"
				android:text="@string/recover_password" android:padding="10dp"
				android:gravity="center" android:layout_below="@+id/password"
				android:layout_toRightOf="@+id/login" />
		</RelativeLayout>
	</ScrollView>

</RelativeLayout>