<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:gravity="center" android:orientation="vertical">
	<ImageView android:id="@+id/community"
		android:layout_width="200dip" android:layout_height="200dip"
		android:src="@drawable/bb_button" />
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:gravity="center" android:orientation="horizontal">
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center" android:orientation="vertical">
				<ImageView android:id="@+id/around_me"
					android:layout_width="75dip" android:layout_height="75dip"
					android:src="@drawable/around_me_button" />
				<TextView android:id="@+id/instructions_label"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/around_me" android:textSize="14sp"
					android:gravity="center_vertical" android:textStyle="normal" />
			</LinearLayout>
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center" android:orientation="vertical"
				android:layout_marginLeft="10dp">
				<ImageView android:id="@+id/beer_bb_list"
					android:layout_width="75dip" android:layout_height="75dip"
					android:src="@drawable/bb_button" />
				<TextView android:id="@+id/instructions_label"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/my_beers" android:textSize="14sp"
					android:gravity="center_vertical" android:textStyle="normal" />
			</LinearLayout>
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center" android:orientation="vertical"
				android:layout_marginLeft="10dp">
				<ImageView android:id="@+id/help" android:layout_width="75dip"
					android:layout_height="75dip" android:src="@drawable/help_button" />
				<TextView android:id="@+id/instructions_label"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/instructions" android:textSize="14sp"
					android:gravity="center_vertical" android:textStyle="normal" />
			</LinearLayout>
		</LinearLayout>
	</RelativeLayout>
	`
</LinearLayout>
